--- a/package.json
+++ b/package.json
@@ -4,11 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-<<<<<<< HEAD
-    "start": "vite --port 5000",
-=======
     "start": "node server.js",
->>>>>>> 8f0e3e1ba3c03fbece5084514dfe181bf77874ff
+    "dev": "vite --port 5000",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
